# AI_Alcohol_Label_Verification

./: .gitignore  README.md  Take-Home Project_AI-Powered Alcohol Label Verification App.pptx  app.py  lib_system.py  pyproject.toml  rag_system.py  requirements.txt  ~$Take-Home Project_AI-Powered Alcohol Label Verification App.pptx
Test_data/Test_Data_Fail/: Wine Application.docx
Test_data/Test_Data_Pass/: Beer Application.docx  Spirits Application.docx
