[tool.poetry]
name = "ai_alcohol_label_verification"
version = "0.1.0"
description = "AI-powered alcohol label verification app"
authors = ["Adrian Olivera <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.54.0"
pandas = "^2.0.0"
easyocr = "^1.7.2"
opencv-python-headless = "^4.13.0"
numpy = "^1.26.4"
torch = "2.2.2+cpu"
python-docx = "^1.2.0"
PyPDF2 = "^3.0.1"
thefuzz = "^0.22.1"
python-Levenshtein = "^0.27.3"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"